# OCCT

./: CMakeLists.txt  OpenCASCADE.md  README.md  Viewer.cpp  main.cpp
PLY/: edge_face_connectivity.txt  edge_points.ply  face_points.ply  mesh.ply
